# doubt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  bump_version.py  datasets.py  makefile  pyproject.toml  pytest.ini  requirements.txt  setup.py
.data/: auto_insurance.txt
.github/workflows/: ci.yml  docs.yml
docs/source/: conf.py  doubt.datasets.rst  doubt.models.boot.rst  doubt.models.glm.rst  doubt.models.linear.rst  doubt.models.rst  doubt.models.tree.rst  doubt.rst  index.rst  modules.rst
doubt/: __init__.py  cdata_structures.pyx  data_structures.c  data_structures.py  data_structures.pyx  setup.py
doubt/datasets/: __init__.py  _basedataset.py  _dataset.py  airfoil.py  auto_insurance.py  bike_sharing_daily.py  bike_sharing_hourly.py  blog.py  boston_housing.py  concrete.py  cpu.py  datasets.py  facebook_comments.py  facebook_metrics.py  fish_bioconcentration.py  fish_toxicity.py  forest_fire.py  gas_turbine.py  nanotube.py  new_taipei_housing.py  parkinsons.py  power_plant.py  protein.py  servo.py  solar_flare.py  space_shuttle.py  stocks.py  superconductivity.py  tehran_housing.py  wine_quality.py  yacht.py
doubt/estimators/: __init__.py  _estimator.py  _forest.c  _forest.html  _forest.pyx  forest.py  linear.py  nn.py  tree.py  tree_builder.py
doubt/models/: __init__.py  _model.py
doubt/models/boot/: __init__.py  boot.py
doubt/models/glm/: __init__.py  linear.py  quantile_loss.py  quantile_regressor.py
doubt/models/linear/: __init__.py  qreg.py
doubt/models/nn/: __init__.py  nn.py  tf.py
doubt/models/tree/: __init__.py  forest.py  tree.py  utils.py
doubt/models/trees/: forest.py  tree.py  tree_builder.py
src/doubt/: __init__.py
src/doubt/datasets/: __init__.py  airfoil.py  bike_sharing_daily.py  bike_sharing_hourly.py  blog.py  concrete.py  cpu.py  dataset.py  facebook_comments.py  facebook_metrics.py  fish_bioconcentration.py  fish_toxicity.py  forest_fire.py  gas_turbine.py  nanotube.py  new_taipei_housing.py  parkinsons.py  power_plant.py  protein.py  servo.py  solar_flare.py  space_shuttle.py  stocks.py  superconductivity.py  tehran_housing.py  yacht.py
src/doubt/models/: __init__.py  model.py
src/doubt/models/boot/: __init__.py  boot.py
src/doubt/models/glm/: __init__.py  quantile_loss.py  quantile_regressor.py
src/doubt/models/tree/: __init__.py  forest.py  tree.py  utils.py
src/scripts/: versioning.py
