[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "doubt"
version = "4.4.1"
description = "Bringing back uncertainty to machine learning."
authors = ["Dan Saattrup Nielsen <saattrupdan@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/saattrupdan/doubt"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tqdm = "^4.62.0"
numpy = "^1.23.0"
pandas = "^1.4.0"
joblib = "^1.2.0"
scikit-learn = "^1.1.1"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"
tables = "~3.7.0"

[tool.poetry.group.dev.dependencies]
pdoc = "^7.1.1"
pre-commit = "^2.17.0"
black = "^23.1.0"
requests = "^2.28.0"
lxml = "^4.9.0"
isort = "^5.10.1"
pytest-xdist = "^2.5.0"
readme-coverage-badger = ">=0.1.2,<1.0.0"
Pygments = "2.11"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    '--verbose',
    '--durations=10',
    '--color=yes',
    '-s',
    '-vv',
    '--doctest-modules',
    '--cov=src/doubt',
    '-n 8',
]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests", "src/doubt"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.isort]
profile = "black"
