[tool.poetry]
name = "doubt"
version = "5.1.0"
description = "Bringing back uncertainty to machine learning."
authors = ["Dan Saattrup Nielsen <saattrupdan@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/saattrupdan/doubt"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tqdm = "^4.62.0"
numpy = "^1.23.0"
pandas = ">=1.4.0,<3.0.0"
joblib = "^1.2.0"
scikit-learn = ">=1.1.0,<1.3.0"
scipy = "^1.10.0"
urllib3 = "^2.0.7"
tables = { version = "^3.9.2", optional = true }
xlrd = { version = "^2.0.1", optional = true }
openpyxl = { version = "^3.0.10", optional = true }

[tool.poetry.group.dev.dependencies]
pdoc = ">=7.1.1"
pytest = ">=8.1.1"
pre-commit = ">=3.6.2"
requests = ">=2.28.0"
lxml = ">=5.1.0"
pytest-cov = ">=4.1.0"
readme-coverage-badger = ">=0.1.2"
ruff = ">=0.3.2"
mypy = ">=1.9.0"
nbstripout = ">=0.7.1"

[tool.poetry.extras]
datasets = ["tables", "xlrd", "openpyxl"]
all = ["tables", "xlrd", "openpyxl"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    '--verbose',
    '--durations=10',
    '--color=no',
    '-s',
    '-vv',
    '--doctest-modules',
    '--cov=src/doubt',
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
]
log_cli_level = "info"
testpaths = ["tests", "src/doubt"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.lint]
extend-select = [
    "I",
    "D",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
